--- a/wp-content/themes/wine/style/main.css
+++ b/wp-content/themes/wine/style/main.css
@@ -47,6 +47,30 @@ table {
 
 header{
 	width: 100%;
-	height: 100px;
-	background-color: red;
+	background-color: #c1403d;
+}
+
+#imglogo{
+	margin-left: 5%;
+	padding-top: 2%;
+	float: left;
+}
+
+#home{
+	background: url('../img/BACKGROUND.png') no-repeat fixed; 
+  	-webkit-background-size: cover; /* pour anciens Chrome et Safari */
+  	background-size: cover; /* version standardisée */
+	height: 100%;
+	min-height: 818px;
+	/*width: 100%;*/
+}
+
+
+
+footer{
+	width: 100%;
+	height: 70px;
+	background-color: #c1403d;
+	bottom :0;
+	position: fixed;
 }
