--- a/wp-content/themes/wine/css/main.css
+++ b/wp-content/themes/wine/css/main.css
@@ -165,7 +165,12 @@ header{
 	
 }
 
+.categories li {
+	display: inline;
+	text-align: center;
+	padding-right: 15px;
 
+}
 
 
 /* FOOTER */
@@ -216,5 +221,5 @@ footer h2{
 
 #test{
 	width: 100%;
-	height: 500px;
+	height: 200px;
 }
