--- a/wp-content/themes/wine/css/main.css
+++ b/wp-content/themes/wine/css/main.css
@@ -118,22 +118,24 @@ header{
 
 /* ARTICLES */
 
-.titredef {
+
+.blog-main{
+	margin-top: 165px;
+}
+
+.titredef a{
 	font-family: 'coolvetica';
 	font-size: 3em;
 	color: #c1403d;
-	margin-top: 180px;
-	margin-bottom: 30px;
-
 }
 
 .titredef small{
 	font-family: 'coolvetica';
-	font-size: 0.3em;
+	font-size: 1em;
 	color: #434242;
-	margin-left: 100px;
-	
+	margin-left: 100px;	
 }
+
 
 #definition h2 {
 	font-family: 'coolvetica';
@@ -150,6 +152,7 @@ header{
 	color: #434242;
 	line-height: 19px;
 	text-align: justify;
+	margin-top: 30px;
 }
 
 #definition li {
@@ -203,7 +206,12 @@ header{
 #titre-cat{
 	text-align: center;
 	padding-bottom: 50px;
-	border-right: solid 4px #e1a4a1;
+	border-right: solid 4px #e1a4a1;	
+}
+
+#titre-cat a{
+	
+	color: black;
 }
 
 #titre-cat::first-letter{
