--- a/wp-content/themes/wine/css/main.css
+++ b/wp-content/themes/wine/css/main.css
@@ -282,3 +282,40 @@ ul.categories {
 }
 
 
+@media screen and (min-width: 240px) and (max-width: 400px) {
+
+#cat h1 {
+	width: 120px;
+	height: 200px;	
+	background-color: #c1403d;
+	border: none;
+	text-align: center;
+	font-family: 'coolvetica';
+	font-size: 65px;
+	color: white;
+	padding-top: 65px;
+	
+	
+	}
+
+#titre-cat{
+	text-align: center;
+	padding-bottom: 50px;
+	border-right: solid 4px #e1a4a1;
+	
+	}
+
+#fake-head{
+	width: 100%;
+	height: 125px;
+	}
+
+.titredef small{
+	font-family: 'coolvetica';
+	font-size: 1em;
+	color: #434242;
+	margin-left: 10px;	
+	}
+}
+
+
