--- a/wp-content/themes/wine/css/main.css
+++ b/wp-content/themes/wine/css/main.css
@@ -48,29 +48,24 @@ html, body{
 	height: 100%;
 }
 
-/* HEADER */
-
-header{
-	width: 100%;
-	background-color: #c1403d;
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+  padding-right: 0;
+  padding-left: 0;
 }
+
+/* HEADER */
 
 .colornavbarheader{
 	background-color: #c1403d;
 	border: none;
 }
 
-.inlineblock{
-	display: inline-block;
-	margin-top: 1.5%;
+.imglogo{
+	width: 120;
+	height: 80px
 }
 
 /* HOMEPAGE */
-
-.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9{
-	
-	padding: 0;
-}
 
 .containmargintop{
 	padding-top: 2%;
@@ -205,17 +200,16 @@ header{
 	height: 100px;
 }
 
-#cat h1 {
-	width: 160px;
-	height: 200px;	
+h1.titrelettre{
+	width: 100%;
+	height: 180px;	
 	background-color: #c1403d;
 	border: none;
 	text-align: center;
 	font-family: 'coolvetica';
 	font-size: 65px;
 	color: white;
-	padding-top: 65px;
-
+	padding-top: 55px;
 }
 
 .list-cat {
@@ -239,29 +233,9 @@ header{
 	color: #c1403d;
 }
 
-.pubcatleft{
-	width: 19%;
+.marginpubcat{
+	margin-bottom: 20%;
 }
-
-.imgpubcatleft{
-	width: 250px;
-	height: 250px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 12px;
-}
-
-.pubcatright{
-	width: 19%;
-}
-
-.imgpubcatright{
-	width: 250px;
-	height: 774px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
 
 /* FOOTER */
 
@@ -347,14 +321,26 @@ ul.categories {
 
 }
 
-@media screen and (min-width: 240px) and (max-width: 320px) {
+@media screen and (min-width: 240px) and (max-width: 276px) {
 
 	ul.categories {
-	padding-top: 8px;	
+	padding-top: 3px;	
 	}
 
 	.categories a{
-		font-size: 1em;
+		font-size: 0.8em;
+	}
+	
+}
+
+@media screen and (min-width: 276px) and (max-width: 320px) {
+
+	ul.categories {
+	padding-top: 3px;	
+	}
+
+	.categories a{
+		font-size: 0.8em;
 	}
 	
 }
@@ -400,10 +386,10 @@ ul.categories {
 
 }
 
-@media screen and (min-width: 240px) and (max-width: 320px) {
+@media screen and (min-width: 240px) and (max-width: 275px) {
 
 	#home h1{
-		font-size: 2.5em;
+		font-size: 2em;
 		padding-top: 55%;
 	}
 
@@ -417,7 +403,24 @@ ul.categories {
 
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 275px) and (max-width: 320px) {
+
+	#home h1{
+		font-size: 2.5em;
+		padding-top: 45%;
+	}
+
+	#home .boxsearch{
+		height: 30px;
+	}
+
+	#home .buttonsearch{
+		height: 30px;
+	}
+
+}
+
+@media screen and (min-width: 320px) and (max-width: 360px) {
 
 	#home h1{
 		font-size: 2.5em;
@@ -434,81 +437,303 @@ ul.categories {
 
 }
 
+@media screen and (min-width: 360px) and (max-width: 480px) {
+
+	#home h1{
+		font-size: 2.5em;
+		padding-top: 35%;
+	}
+
+	#home .boxsearch{
+		height: 30px;
+	}
+
+	#home .buttonsearch{
+		height: 30px;
+	}
+
+}
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+
+	#home h1{
+		font-size: 3em;
+		padding-top: 25%;
+	}
+
+	#home .boxsearch{
+		height: 30px;
+	}
+
+	#home .buttonsearch{
+		height: 30px;
+	}
+
+}
+
 
 /* PAGE CATEGORIES */
 
-@media screen and (min-width: 240px) and (max-width: 480px) {
+@media screen and (min-width: 240px) and (max-width: 320px) {
 
-#cat h1{
-	width: 350px;
-	height: 100px;	
-	background-color: #c1403d;
-	border: none;
-	text-align: center;
-	font-family: 'coolvetica';
-	font-size: 65px;
-	color: white;
-	padding-top: 15px;
-	margin-bottom: 0px;
+	h1.titrelettre{
+		width: 100%;
+		height: 100px;	
+		background-color: #c1403d;
+		border: none;
+		text-align: center;
+		font-family: 'coolvetica';
+		font-size: 65px;
+		color: white;
+		padding-top: 15px;
+		margin-bottom: 0px;
+	}
 
+	.marginpubcat{
+		margin-bottom: 0;
 	}
 
 
-.lettre{
-	margin-bottom: 30px;
+	.lettre{
+		margin-bottom: 30px;
+	}
+
+	#titre-cat{
+		text-align: center;
+		padding-bottom: 30px;
+		border-right: none;
+		}
+
+	#fake-head{
+		height: 80px;
+	}
+
+	.displaynone{
+		display:none;
+	}
+
 }
 
-#titre-cat{
+@media screen and (min-width: 320px) and (max-width: 480px) {
 
-
-	text-align: left;
-	padding-right: 150px;
-	
-	border-right: none;
+	h1.titrelettre{
+		width: 100%;
+		height: 100px;	
+		background-color: #c1403d;
+		border: none;
+		text-align: center;
+		font-family: 'coolvetica';
+		font-size: 65px;
+		color: white;
+		padding-top: 15px;
+		margin-bottom: 0px;
 	}
 
-#fake-head{
-	width: 100%;
-	height: 100px;
+	.marginpubcat{
+		margin-bottom: 0;
 	}
 
-.pub-cat{
-	display: none !important;
-  	visibility: hidden !important;
+
+	.lettre{
+		margin-bottom: 30px;
+	}
+
+	#titre-cat{
+		text-align: center;
+		border-right: none;
+		}
+
+	#fake-head{
+		height: 80px;
+	}
+
+	.displaynone{
+		display:block;
+	}
 
 }
+
+
+@media screen and (min-width: 480px) and (max-width: 600px) {
+
+	h1.titrelettre{
+		width: 100%;
+		height: 100px;	
+		background-color: #c1403d;
+		border: none;
+		text-align: center;
+		font-family: 'coolvetica';
+		font-size: 65px;
+		color: white;
+		padding-top: 15px;
+		margin-bottom: 0px;
+	}
+
+	.marginpubcat{
+		margin-bottom: 0;
+	}
+
+
+	.lettre{
+		margin-bottom: 30px;
+	}
+
+	#titre-cat{
+		text-align: center;
+		border-right: none;
+		}
+
+	#fake-head{
+		height: 80px;
+	}
+
+	.displaynone{
+		display:block;
+	}
+
+}
+
+@media screen and (min-width: 600px) and (max-width: 800px) {
+
+	h1.titrelettre{
+		width: 100%;
+		height: 100px;	
+		background-color: #c1403d;
+		border: none;
+		text-align: center;
+		font-family: 'coolvetica';
+		font-size: 65px;
+		color: white;
+		padding-top: 15px;
+		margin-bottom: 0px;
+	}
+
+	.marginpubcat{
+		margin-bottom: 0;
+	}
+
+
+	.lettre{
+		margin-bottom: 30px;
+	}
+
+	#titre-cat{
+		text-align: center;
+		border-right: none;
+		}
+
+	#fake-head{
+		height: 100px;
+	}
+
+	.displaynone{
+		display:block;
+	}
+
+}
+
+@media screen and (min-width: 800px) and (max-width: 992px) {
+
+	h1.titrelettre{
+		width: 100%;
+		height: 100px;	
+		background-color: #c1403d;
+		border: none;
+		text-align: center;
+		font-family: 'coolvetica';
+		font-size: 65px;
+		color: white;
+		padding-top: 15px;
+		margin-bottom: 0px;
+	}
+
+	.marginpubcat{
+		margin-bottom: 0;
+	}
+
+
+	.lettre{
+		margin-bottom: 30px;
+	}
+
+	#titre-cat{
+		text-align: center;
+		border-right: none;
+		}
+
+	#fake-head{
+		height: 100px;
+	}
+
+	.displaynone{
+		display:block;
+	}
+
+}
+
+
 
 /* ARTICLE */
 
+@media screen and (max-width: 240px) {
+
+
+}
+
+@media screen and (min-width: 240px) and (max-width: 276px) {
+
+
+	
+}
+
+@media screen and (min-width: 276px) and (max-width: 320px) {
+
+
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+
+	
+}
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+
+
+}
+
+
 @media screen and (min-width: 240px) and (max-width: 480px) {
 
 
-.revenir {
+	.revenir {
+		display: none;
+	}
+
+	.big{
+		background-color: #c1403d;	
+		font-family: 'coolvetica';
+		font-size: 65px;
+		color: white;	
+	}
+
+
+	.big:hover{
+		color: white;
+		text-decoration: none;
+	}
+
+	.blog-main{
+		margin-top: 100px;
+		text-align: center;
+	}
+
+	.titredef h1{
+		margin-top: 0px;
+	}
+
+}
+
+
+.displaynonee{
 	display: none;
-}
-
-.big{
-	background-color: #c1403d;	
-	font-family: 'coolvetica';
-	font-size: 65px;
-	color: white;	
-}
-
-
-.big:hover{
-	color: white;
-	text-decoration: none;
-}
-
-.blog-main{
-	margin-top: 100px;
-	text-align: center;
-}
-
-.titredef h1{
-	margin-top: 0px;
-}
-
-
-
 }
