--- a/wp-content/themes/wine/css/main.css
+++ b/wp-content/themes/wine/css/main.css
@@ -48,10 +48,6 @@ html, body{
 	height: 100%;
 }
 
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
-
-}
-
 /* HEADER */
 
 .colornavbarheader{
@@ -103,6 +99,7 @@ html, body{
 }
 
 #home .buttonsearch{
+	width: 100%;
 	height: 50px;
 	background-color: #c1403d;
 	border: none;
@@ -229,12 +226,14 @@ h1.titrelettre{
 }
 
 #titre-cat{
-	text-align: center;
-	border-right: solid 4px #e1a4a1;	
+	text-align: left;
+	border-left: solid 2px #e1a4a1;
+	background-color: #efedee;
 }
 
 #titre-cat h1{
-	height: 70px;
+	height: 60px;
+	margin-top: 10px;
 	font-size: 0.80em;
 }
 
